--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Gerador de Senhas</title>
 		<link rel="stylesheet" href="style.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+			integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 	</head>
 	<body>
 		<div class="container">
@@ -36,6 +43,29 @@
 				<div class="password"></div>
 			</div>
 		</div>
+		<footer>
+			<div class="social-media">
+				<div class="likedin">
+					<i class="fa-brands fa-linkedin font-size"></i>
+					<a
+						href="https://www.linkedin.com/in/renan-da-silva-8945441a8/"
+						target="_blank"
+						rel="noopener noreferrer"
+						>Renan da Silva</a
+					>
+				</div>
+				<div class="github">
+					<i class="fa-brands fa-github font-size"></i>
+					<a
+						href="https://github.com/r-manfredini"
+						target="_blank"
+						rel="noopener noreferrer"
+						>@r-manfredini</a
+					>
+				</div>
+			</div>
+			Feito com <i class="fa-solid fa-heart co"></i> by <b>Renan Silva</b>
+		</footer>
 
 		<script src="./scripts.js"></script>
 	</body>
