--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 					<input type="number" id="length" min="4" max="20" value="20" />
 				</div>
 				<div>
-					<label>Include uppercase letters</label>
+					<label>Incluir letras maiúsculas</label>
 					<input type="checkbox" id="uppercase" checked />
 				</div>
 				<div>
-					<label>Include lowercase letters</label>
+					<label>Incluir letras minúsculas</label>
 					<input type="checkbox" id="lowercase" checked />
 				</div>
 				<div>
-					<label>Include numbers</label>
+					<label>Incluir números</label>
 					<input type="checkbox" id="number" checked />
 				</div>
 				<div>
-					<label>Include symbols</label>
+					<label>Incluir símbolos</label>
 					<input type="checkbox" id="symbols" checked />
 				</div>
 				<button onclick="getPassword()" class="btn">Gerar Senha</button>
